[gd_scene load_steps=3 format=3 uid="uid://dd2pebrkyjis7"]

[ext_resource type="Script" path="res://game.gd" id="1_3oaev"]
[ext_resource type="Texture2D" uid="uid://hdoba4i4xg3u" path="res://bacjground.jpeg" id="2_kdqki"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oaev")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.572549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kdqki")
expand_mode = 1
stretch_mode = 5

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Gues 5-letter noun word from LLM
"
fit_content = true

[node name="NewGame" type="Button" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "New Game"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Hidden  word:"

[node name="LlmWord" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "*****"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label4" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Type your guess:"

[node name="LineEdit" type="LineEdit" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(93, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "word"
max_length = 5
expand_to_text_length = true
clear_button_enabled = true

[node name="EnterButton" type="Button" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Enter"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2

[node name="Label5" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Your answer is:"

[node name="ResultLabel" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "correct or wrong"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Press to get new word:"

[node name="NextWord" type="Button" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Next word"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="text_changed" from="Control/MarginContainer/VBoxContainer2/HBoxContainer3/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Control/MarginContainer/VBoxContainer2/HBoxContainer3/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/HBoxContainer3/EnterButton" to="." method="_on_enter_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer2/HBoxContainer4/NextWord" to="." method="_on_next_word_pressed"]
